--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,6 +8,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: blue;
+    color: aliceblue;
 }
 nav{
     position: fixed;
